# jitsi-ndi-native

./: .gitignore  CMakeLists.txt  CMakeLists_patch.txt  JitsiNdiGui.backup_v61_20260428_182335.ps1  JitsiNdiGui.ps1  JitsiNdiGui.settings.json  JitsiNdiGui.settings.json.disabled_v37_20260428_022211  JitsiSignaling_integration_patch.txt  README.md  README.txt  README_APPLY.txt  README_APPLY_NUDNYE_FIXES.txt  README_HOTFIX_LINE233.txt  README_REWRITE.md  README_v17.txt  README_v18.txt  README_v20.txt  README_v21.txt  README_v22.txt  README_v23.txt  README_v24.txt  README_v25.txt  README_v26.txt  README_v27.txt  README_v28.txt  README_v28b.txt  README_v29_GUI.txt  README_v29_fix1.txt  README_v29_fix2.txt  apply_av1_patch.py  apply_hotfix_line233.ps1  apply_nudnye_fixes.ps1  check_dav1d_runtime_v20.ps1  check_dav1d_runtime_v21.ps1  copy_runtime_dlls_v18.ps1  copy_runtime_dlls_v20.ps1  copy_runtime_dlls_v21.ps1  create_icon.ps1  current.patch  deps-datachannel.txt  (+30 more)
NDI 6 SDK/: NDI SDK Examples.sln
av1_fix/: README_RU.md  apply_av1_build_fix.py
av1_patch/: README_RU.md
backup_quality_v35_20260428_014904/: NativeWebRTCAnswerer.cpp
backup_turn_udp_stability_v76_20260429_144606/: JitsiSignaling.cpp  NativeWebRTCAnswerer.cpp
backup_v86_desktop_av1_recovery_20260429_181230/: Av1RtpFrameAssembler.h  restore_v86_backup.ps1
backup_v87_receive_bitrate_cap_20260429_181619/: Av1RtpFrameAssembler.cpp  restore_v87_backup.ps1
backup_v88_av1_soft_resync_20260429_182643/: NativeWebRTCAnswerer.cpp  restore_v88_backup.ps1
backup_v90_async_ndi_video_queue_20260429_184926/: NDISender.cpp  NDISender.h  NativeWebRTCAnswerer.cpp  restore_v90_backup.ps1
backup_v92_per_source_video_workers_20260429_194557/: main.cpp
backup_v93_camera1080_local_smooth_20260429_200450/: FfmpegMediaDecoder.cpp  FfmpegMediaDecoder.h  NativeWebRTCAnswerer.cpp
backup_v94_observer_safe_camera_smooth_20260429_202109/: Av1RtpFrameAssembler.cpp  Av1RtpFrameAssembler.h  FfmpegMediaDecoder.cpp  JitsiSignaling.cpp  NativeWebRTCAnswerer.cpp  PerParticipantNdiRouter.h  main.cpp
backup_v95_same_device_protect_20260429_203332/: Av1RtpFrameAssembler.cpp  NativeWebRTCAnswerer.cpp  PerParticipantNdiRouter.cpp  PerParticipantNdiRouter.h
backup_v96_rollback_stable_v94_20260429_204256/: Av1RtpFrameAssembler.h  NativeWebRTCAnswerer.h  PerParticipantNdiRouter.h
backup_v97_same_device_cold_av1_recovery_20260430_120811/: FfmpegMediaDecoder.cpp
backup_v98_no_cap_decoder_stability_20260430_123152/: Av1RtpFrameAssembler.cpp  Av1RtpFrameAssembler.h  JitsiSignaling.cpp  NativeWebRTCAnswerer.cpp  PerParticipantNdiRouter.cpp  main.cpp
backup_v99_conference_safe_budget_20260430_124616/: PerParticipantNdiRouter.cpp
backups/: JitsiNdiGui_before_v50_20260428_155009.ps1
build-ndi/: CMakeCache.txt
fix_libdatachannel_fetch_v46b_20260428/: README.txt  fix_libdatachannel_fetch_and_build_v46b.ps1
gui_backups/: JitsiNdiGui.before_v51.20260428_155502.ps1  JitsiNdiGui_before_v53_20260428_160825.ps1
jitsi-master/: pom.xml
jitsi_ndi_audio_same_source_quality_fix_20260427/: README_RU.txt  apply_audio_same_source_quality_fix.ps1
jitsi_ndi_audio_same_source_quality_fix_20260427_v2/: README_ASCII.txt  apply_audio_fix_ascii.ps1
jitsi_ndi_av1_loss_gate_v80_20260429/: README.txt  apply_av1_loss_gate_v80.ps1  restore_latest_av1_loss_gate_v80_backup.ps1
jitsi_ndi_av1_reorder_recovery_v81_20260429/: Av1RtpFrameAssembler.cpp  README.txt  apply_av1_reorder_recovery_v81.ps1  restore_latest_av1_reorder_recovery_v81_backup.ps1
jitsi_ndi_emergency_restore_baseline_v79_20260429/: README_emergency_restore_baseline_v79.txt  apply_emergency_restore_baseline_v79.ps1  restore_latest_emergency_restore_baseline_v79_backup.ps1
jitsi_ndi_entry_latency_v84_20260429/: NativeWebRTCAnswerer.cpp  apply_entry_latency_v84.ps1  restore_latest_entry_latency_v84_backup.ps1
jitsi_ndi_fast_recovery_v78a_1080p_20260429/: README_fast_recovery_v78a_1080p.txt  apply_fast_recovery_v78a_1080p.ps1  restore_latest_fast_recovery_v78a_1080p_backup.ps1
jitsi_ndi_fast_recovery_v78b_safe_20260429/: README_fast_recovery_v78b_safe.txt  apply_fast_recovery_v78b_safe.ps1  restore_latest_fast_recovery_v78b_safe_backup.ps1
jitsi_ndi_gui_interface_only_v33_20260428/: README_v33_INTERFACE_ONLY.txt  apply_gui_interface_only_v33.ps1  restore_latest_gui_backup.ps1
jitsi_ndi_gui_minimal_nick_link_v55_20260428/: README_v55_minimal_nick_link.txt  apply_gui_minimal_nick_link_v55.ps1  rebuild_after_gui_minimal_nick_link_v55.ps1  restore_latest_gui_minimal_nick_link_v55_backup.ps1
jitsi_ndi_gui_only_safe_v32_20260428/: JitsiNdiGui.ps1  README_v32_GUI_ONLY_SAFE.txt  apply_gui_only_safe_v32.ps1
jitsi_ndi_gui_restore_minimal_v56_20260428/: README_v56_restore_minimal.txt  apply_restore_minimal_v56.ps1  restore_latest_restore_minimal_v56_backup.ps1
jitsi_ndi_gui_restore_minimal_v57_20260428/: JitsiNdiGui.ps1  README_v57_restore_minimal.txt  apply_restore_minimal_v57.ps1  restore_latest_restore_minimal_v57_backup.ps1
jitsi_ndi_gui_restore_working_v37_20260428/: JitsiNdiGui.ps1  README_v37_restore.txt  apply_gui_restore_working_v37.ps1  restore_latest_gui_backup_v37.ps1
jitsi_ndi_gui_safe_restore_v31_20260428/: JitsiNdiGui.ps1  README_SAFE_GUI_v31.txt  apply_gui_safe_restore_v31.ps1  rollback_gui_safe_v31.ps1
jitsi_ndi_gui_v30_nick_log_quality_fix_20260428/: JitsiNdiGui.ps1  README_v30_GUI.txt  apply_gui_v30.ps1
jitsi_ndi_gui_v36_interface_safe_20260428/: README_v36_INTERFACE_SAFE.txt  apply_gui_v36.ps1  restore_latest_gui_backup_v36.ps1
jitsi_ndi_gui_v38_visual_monitoring_20260428/: JitsiNdiGui.ps1  README_v38_GUI.txt  apply_gui_v38.ps1  restore_latest_gui_backup_v38.ps1
jitsi_ndi_gui_v39_no_nick_bomfix_20260428/: README_v39_GUI.txt  apply_gui_v39.ps1  restore_latest_gui_backup_v39.ps1
jitsi_ndi_gui_v50_safe_monitoring_20260428/: README_v50_GUI.txt  apply_gui_v50.ps1  restore_latest_gui_backup_v50.ps1
jitsi_ndi_gui_v51_source_dashboard_20260428/: JitsiNdiGui.ps1  README_v51_GUI.txt  apply_gui_v51.ps1  restore_latest_gui_backup_v51.ps1
(+539 files in other folders)
